# react-native-turbo-data

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TurboData.podspec  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: build.gradle  gradle.properties
android/src/main/java/com/turbodata/: NativeTurboDataSpec.kt  TurboDataModule.kt  TurboDataPackage.kt
cpp/: CMakeLists.txt  NativeTurboData.cpp  NativeTurboData.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/turbodata.example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/TurboDataExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/TurboDataExample.xcodeproj/: project.pbxproj
example/ios/TurboDataExample.xcodeproj/xcshareddata/xcschemes/: TurboDataExample.xcscheme
example/src/: App.tsx
ios/: TurboData.h  TurboData.mm
specs/: NativeTurboData.ts
src/: NativeTurboData.ts  index.tsx
